<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Note</string>
    <string name="show_note_count">Note(%1$s)</string>
    <string name="stared_note_count">Favourite(%1$s)</string>
    <string name="edit_menu_delete">Delete</string>
    <string name="edit_menu_favor">Favor</string>
    <string name="edit_menu_removefavor">Remove Favor</string>
    <string name="edit_menu_change_bg">Change NoteBackground</string>
    <string name="edit_menu_change_cover">Change Cover</string>
    <string name="edit_menu_change_page">Pages</string>
    <string name="edit_menu_saveas">SaveAs</string>

    <!-- 插入的行数 -->
    <string name="fullscreen_edit_line">23</string>
    <!-- 每行的空格数 -->
    <string name="fullscreen_edit_line_lenth">50</string>
    <string name="pop_pen_title">Pen Setting</string>
    <string name="pop_eraser_title">Eraser Setting</string>
    <string name="pop_eraser_clear_all">Clear All</string>
    
    <string name="show_menu_delete">Delete</string>
    <string name="show_menu_search">Search</string>
    <string name="show_menu_sort">Sort</string>
    <string name="show_menu_all_star">Favor</string>
    
    <string name="show_menu_confirm">OK</string>
    <string name="show_menu_cancel">Cancel</string>
    <string name="item_menu_rename">Rename</string>

    <string name="alert_input_newname">Input New title!</string>
    <string name="show_menu_delete_selectall">All</string>
    <string name="show_menu_delete_diselectall">None</string>

    <string name="alert_delete_content">The note willd be deleted!</string>
    
    <string name="input_title_dialog_title">Plese input the title!</string>
    <string name="deleteing_note">deleteing note...</string>
    <string name="saveing_note">saveing note...</string>
    <string name="alert_clear_all">Can not restore after clear all！</string>
    <string name="save_as_title">Save As Png！</string>
    <string name="save_as_toast_start">Save As:</string>
    <string name="fulltext_max">Reach Max Lines!</string>
    <string name="alert_sort">Updateing Data...</string>
    
    <string name="exit_ensure">Exit？</string>
    <string name="exit_without_save">Drop</string>
    <string name="exit_with_save">Save</string>
    <string name="item_operation">Operation</string>
    <string name="choose_mark_color">Choos Color</string>
    
    <string name="bg_txt00">Style1</string>
    <string name="bg_txt01">Style2</string>
    <string name="bg_txt02">Style3</string>
    <string name="bg_txt03">Style4</string>
    <string name="bg_txt04">Style5</string>
    
    <string name="sortby_createtime">CreateTime(Old-New)</string>
    <string name="sortby_updatetime">UpdateTime(New-Old)</string>
    <string name="changequatoast">Change To The %1$s Quadrant</string>
    <string name="searchnothing">Find Nothing</string>
    <string name="starchnothing">Star Nothing</string>
    
    <string name="intro">Introduction</string>
    <string name="intro_content">  1.Now,the note is in drawing mode,and you can draw content on the screen with your fingers.  \n \n  2.You can click the drawing icon in the upper left hand corner of the screen,then adjust the color and with of the paint. \n\n  3.If you want to insert words,you can click the text icon and switch the note into text edit mode. \n\n  4.If you want to erase the content on the screen,you can switch into clean mode.Of course,you can use undo feature and redo feature. \n\n  5.In addition,you can switch different quadrant by buttons at the bottom of screen.</string>
</resources>