<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:background="@color/color_alert_dialog_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/id_alertdiaolg_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_cancle_bg"
        android:padding="10dp"
        android:text="@string/alert_delete_content" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/id_alertdiaolg_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/show_menu_cancel" />

        <TextView
            android:id="@+id/id_alertdiaolg_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/show_menu_confirm" />
    </LinearLayout>

</LinearLayout>