<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_popmenu_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@drawable/pop_menu_item"
            android:gravity="left|center_vertical"
            android:padding="5dp"
            android:text="@string/exit_ensure"
            android:textColor="#000000"
            android:textSize="25dp" />

        <Button
            android:id="@+id/id_exit_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/pop_menu_item"
            android:gravity="left|center_vertical"
            android:padding="10dp"
            android:text="@string/exit_with_save"
            android:textColor="#000000" />

        <Button
            android:id="@+id/id_exit_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/pop_menu_item"
            android:gravity="left|center_vertical"
            android:padding="10dp"
            android:text="@string/exit_without_save"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>